--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   </head>
   <body>
     <div class="container">
-      <header>header</header>
+      <header>
+        <div class="header_wrapper">
+          <div class="logo"></div>
+        </div>
+      </header>
       <div id="fullpage" class="section-container">
         <section class="section">
           <ul class="main_slide_wrapper">
