--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script
       src="https://code.jquery.com/jquery-3.6.1.min.js"
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
@@ -26,14 +29,109 @@
     <title>KISA 한국인터넷진흥원</title>
   </head>
   <body>
-    <div class="container">
       <header>
         <div class="header_wrapper">
-          <div class="logo"></div>
+          <div class="logo"><a href="#"><img src="img/logo/logo_w.png" alt="logo"></a></div>
+          <ul class="header_menu">
+            <li class="depth1"><a href="#">고객서비스</a>
+              <div class="depth2_bg">
+                <div class="depth2_wrapper">
+                  <h2>고객서비스</h2>
+                  <ul class="depth2 first">
+                    <li><a href="#">주요서비스</a></li>
+                    <li><a href="#">대민웹서비스</a></li>
+                    <li><a href="#">118상담 서비스 안내</a></li>
+                    <li><a href="#" class="get_depth3">통합신고센터</a>
+                      <ul class="depth3">
+                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
+                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
+                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
+                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
+                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="depth1"><a href="#">지식플랫폼</a>
+              <div class="depth2_bg">
+                <div class="depth2_wrapper">
+                  <h2>지식플랫폼</h2>
+                  <ul class="depth2 second">
+                    <li><a href="#">연구보고서</a></li>
+                    <li><a href="#">동향분석</a></li>
+                    <li><a href="#">정기간행물</a></li>
+                    <li><a href="#">실태조사 및 통계</a></li>
+                    <li><a href="#">역대발간물</a></li>
+                    <li><a href="#" class="get_depth3">법령ㆍ가이드라인</a>
+                      <ul class="depth3">
+                        <li><a href="#">- 법령ㆍ고시</a></li>
+                        <li><a href="#">- 가이드라인</a></li>
+                        <li><a href="#">- 안내서</a></li>
+                        <li><a href="#">- 사례집, 편람 등</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="depth1"><a href="#">사업소개</a>
+              <div class="depth2_bg">
+                <div class="depth2_wrapper">
+                  <h2>사업소개</h2>
+                  <ul class="depth2 third">
+                    <li><a href="#" class="get_depth3">사이버침해대응본부</a>
+                      <ul class="depth3">
+                        <li><a href="#">- 본부소개</a></li>
+                        <li><a href="#">- 침해사고 대응</a></li>
+                        <li><a href="#">- 침해사고 분석</a></li>
+                        <li><a href="#">- 침해사고 예방</a></li>
+                        <li><a href="#">- 위협정보 공유ㆍ협력</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#" class="get_depth3">개인정보보호본부</a>
+                      <ul class="depth3">
+                        <li><a href="#">- 본부소개</a></li>
+                        <li><a href="#">- 정책ㆍ협력</a></li>
+                        <li><a href="#">- 안전활용ㆍ교육</a></li>
+                        <li><a href="#">- 침해사고 예방ㆍ신고</a></li>
+                        <li><a href="#">- 불법스팸 대응</a></li>
+                        <li><a href="#">- 위치정보ㆍ본인확인</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#" class="get_depth3">사이버침해대응본부</a>
+                      <ul class="depth3">
+                        <li><a href="#">- 본부소개</a></li>
+                        <li><a href="#">- 침해사고 대응</a></li>
+                        <li><a href="#">- 침해사고 분석</a></li>
+                        <li><a href="#">- 침해사고 예방</a></li>
+                        <li><a href="#">- 위협정보 공유ㆍ협력</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#" class="get_depth3">사이버침해대응본부</a>
+                      <ul class="depth3">
+                        <li><a href="#">- 본부소개</a></li>
+                        <li><a href="#">- 침해사고 대응</a></li>
+                        <li><a href="#">- 침해사고 분석</a></li>
+                        <li><a href="#">- 침해사고 예방</a></li>
+                        <li><a href="#">- 위협정보 공유ㆍ협력</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="depth1"><a href="#">주요성과</a></li>
+            <li class="depth1"><a href="#">알림마당</a></li>
+            <li class="depth1"><a href="#">ESG 열린경영</a></li>
+            <li class="depth1"><a href="#">KISA 소개</a></li>
+          </ul>
+          <div class="header_tool">123141542512</div>
         </div>
       </header>
       <div id="fullpage" class="section-container">
-        <section class="section">
+        <section class="section first">
           <ul class="main_slide_wrapper">
             <li class="main_slide1">
               <img src="../img/main/main_slide_01.jpg" alt="1" />
@@ -46,16 +144,20 @@
             </li>
           </ul>
         </section>
-        <section class="section">2</section>
-        <section class="section">3</section>
+        <section class="section second">
+
+        </section>
+        <section class="section third">3</section>
       </div>
-    </div>
     <script src="../js/common.js"></script>
     <script>
       $(function () {
         $("#fullpage").fullpage({
           anchors: ["#section1", "#section2", "#section3"],
-          slideNavigation: false,
+          slideNavigation: true,
+          navigation: true,
+          navigationPosition: 'right',
+          navigationTooltips: ['01 Main', '02 Business', '03 News'],
         });
       });
     </script>
