--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://code.jquery.com/jquery-3.6.1.min.js"
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
@@ -29,126 +36,217 @@
     <title>KISA 한국인터넷진흥원</title>
   </head>
   <body>
-      <header>
-        <div class="header_wrapper">
-          <div class="logo"><a href="#"><img src="img/logo/logo_w.png" alt="logo"></a></div>
-          <ul class="header_menu">
-            <li class="depth1"><a href="#">고객서비스</a>
-              <div class="depth2_bg">
-                <div class="depth2_wrapper">
-                  <h2>고객서비스</h2>
-                  <ul class="depth2 first">
-                    <li><a href="#">주요서비스</a></li>
-                    <li><a href="#">대민웹서비스</a></li>
-                    <li><a href="#">118상담 서비스 안내</a></li>
-                    <li><a href="#" class="get_depth3">통합신고센터</a>
-                      <ul class="depth3">
-                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
-                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
-                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
-                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
-                        <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="depth1"><a href="#">지식플랫폼</a>
-              <div class="depth2_bg">
-                <div class="depth2_wrapper">
-                  <h2>지식플랫폼</h2>
-                  <ul class="depth2 second">
-                    <li><a href="#">연구보고서</a></li>
-                    <li><a href="#">동향분석</a></li>
-                    <li><a href="#">정기간행물</a></li>
-                    <li><a href="#">실태조사 및 통계</a></li>
-                    <li><a href="#">역대발간물</a></li>
-                    <li><a href="#" class="get_depth3">법령ㆍ가이드라인</a>
-                      <ul class="depth3">
-                        <li><a href="#">- 법령ㆍ고시</a></li>
-                        <li><a href="#">- 가이드라인</a></li>
-                        <li><a href="#">- 안내서</a></li>
-                        <li><a href="#">- 사례집, 편람 등</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="depth1"><a href="#">사업소개</a>
-              <div class="depth2_bg">
-                <div class="depth2_wrapper">
-                  <h2>사업소개</h2>
-                  <ul class="depth2 third">
-                    <li><a href="#" class="get_depth3">사이버침해대응본부</a>
-                      <ul class="depth3">
-                        <li><a href="#">- 본부소개</a></li>
-                        <li><a href="#">- 침해사고 대응</a></li>
-                        <li><a href="#">- 침해사고 분석</a></li>
-                        <li><a href="#">- 침해사고 예방</a></li>
-                        <li><a href="#">- 위협정보 공유ㆍ협력</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#" class="get_depth3">개인정보보호본부</a>
-                      <ul class="depth3">
-                        <li><a href="#">- 본부소개</a></li>
-                        <li><a href="#">- 정책ㆍ협력</a></li>
-                        <li><a href="#">- 안전활용ㆍ교육</a></li>
-                        <li><a href="#">- 침해사고 예방ㆍ신고</a></li>
-                        <li><a href="#">- 불법스팸 대응</a></li>
-                        <li><a href="#">- 위치정보ㆍ본인확인</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#" class="get_depth3">사이버침해대응본부</a>
-                      <ul class="depth3">
-                        <li><a href="#">- 본부소개</a></li>
-                        <li><a href="#">- 침해사고 대응</a></li>
-                        <li><a href="#">- 침해사고 분석</a></li>
-                        <li><a href="#">- 침해사고 예방</a></li>
-                        <li><a href="#">- 위협정보 공유ㆍ협력</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#" class="get_depth3">사이버침해대응본부</a>
-                      <ul class="depth3">
-                        <li><a href="#">- 본부소개</a></li>
-                        <li><a href="#">- 침해사고 대응</a></li>
-                        <li><a href="#">- 침해사고 분석</a></li>
-                        <li><a href="#">- 침해사고 예방</a></li>
-                        <li><a href="#">- 위협정보 공유ㆍ협력</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="depth1"><a href="#">주요성과</a></li>
-            <li class="depth1"><a href="#">알림마당</a></li>
-            <li class="depth1"><a href="#">ESG 열린경영</a></li>
-            <li class="depth1"><a href="#">KISA 소개</a></li>
-          </ul>
-          <div class="header_tool">123141542512</div>
+    <header>
+      <div class="header_wrapper">
+        <div class="logo">
+          <a href="#"
+            ><img src="img/logo/logo_w.png" alt="logo" class="logoImg"
+          /></a>
         </div>
-      </header>
-      <div id="fullpage" class="section-container">
-        <section class="section first">
-          <ul class="main_slide_wrapper">
-            <li class="main_slide1">
-              <img src="../img/main/main_slide_01.jpg" alt="1" />
+        <ul class="header_menu">
+          <li class="depth1">
+            <a href="#">고객서비스</a>
+            <div class="depth2_bg">
+              <div class="depth2_wrapper">
+                <h2>고객서비스</h2>
+                <ul class="depth2 first">
+                  <li><a href="#">주요서비스</a></li>
+                  <li><a href="#">대민웹서비스</a></li>
+                  <li><a href="#">118상담 서비스 안내</a></li>
+                  <li>
+                    <a href="#" class="get_depth3">통합신고센터</a>
+                    <ul class="depth3">
+                      <li><a href="#">- 부패ㆍ공익신고 안내</a></li>
+                      <li><a href="#">- 복지보조금부정신고 센터</a></li>
+                      <li><a href="#">- 이해충돌 신고ㆍ상담센터</a></li>
+                      <li><a href="#">- 인권침해 구제</a></li>
+                      <li><a href="#">- 기업성장 응답센터</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="depth1">
+            <a href="#">지식플랫폼</a>
+            <div class="depth2_bg">
+              <div class="depth2_wrapper">
+                <h2>지식플랫폼</h2>
+                <ul class="depth2 second">
+                  <li><a href="#">연구보고서</a></li>
+                  <li><a href="#">동향분석</a></li>
+                  <li><a href="#">정기간행물</a></li>
+                  <li><a href="#">실태조사 및 통계</a></li>
+                  <li><a href="#">역대발간물</a></li>
+                  <li>
+                    <a href="#" class="get_depth3">법령ㆍ가이드라인</a>
+                    <ul class="depth3">
+                      <li><a href="#">- 법령ㆍ고시</a></li>
+                      <li><a href="#">- 가이드라인</a></li>
+                      <li><a href="#">- 안내서</a></li>
+                      <li><a href="#">- 사례집, 편람 등</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="depth1">
+            <a href="#">사업소개</a>
+            <div class="depth2_bg">
+              <div class="depth2_wrapper">
+                <h2>사업소개</h2>
+                <ul class="depth2 third">
+                  <li>
+                    <a href="#" class="get_depth3">사이버침해대응본부</a>
+                    <ul class="depth3">
+                      <li><a href="#">- 본부소개</a></li>
+                      <li><a href="#">- 침해사고 대응</a></li>
+                      <li><a href="#">- 침해사고 분석</a></li>
+                      <li><a href="#">- 침해사고 예방</a></li>
+                      <li><a href="#">- 위협정보 공유ㆍ협력</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#" class="get_depth3">개인정보보호본부</a>
+                    <ul class="depth3">
+                      <li><a href="#">- 본부소개</a></li>
+                      <li><a href="#">- 정책ㆍ협력</a></li>
+                      <li><a href="#">- 안전활용ㆍ교육</a></li>
+                      <li><a href="#">- 침해사고 예방ㆍ신고</a></li>
+                      <li><a href="#">- 불법스팸 대응</a></li>
+                      <li><a href="#">- 위치정보ㆍ본인확인</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#" class="get_depth3">디지털보안산업본부</a>
+                    <ul class="depth3">
+                      <li><a href="#">- 본부소개</a></li>
+                      <li><a href="#">- 정보보호 기업 육성</a></li>
+                      <li><a href="#">- 기업 정보보호 지원</a></li>
+                      <li><a href="#">- 보안 테스트베드 운영</a></li>
+                      <li><a href="#">- 정보보호 인증</a></li>
+                      <li><a href="#">- 정보보호 인재 육성</a></li>
+                      <li><a href="#">- 정보보호 서비스 기업 지정제도</a></li>
+                      <li><a href="#">- 정보보호 관련 정보공개 제도</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#" class="get_depth3">디지털기반본부</a>
+                    <ul class="depth3">
+                      <li><a href="#">- 본부소개</a></li>
+                      <li><a href="#">- 디지털전환</a></li>
+                      <li><a href="#">- 블록체인ㆍ핀테크</a></li>
+                      <li><a href="#">- 인터넷주소</a></li>
+                      <li><a href="#">- ICT분쟁조정</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="depth1"><a href="#">주요성과</a></li>
+          <li class="depth1">
+            <a href="#">알림마당</a>
+            <div class="depth2_bg">
+              <div class="depth2_wrapper">
+                <h2>알림마당</h2>
+                <ul class="depth2">
+                  <li><a href="#">공지사항</a></li>
+                  <li><a href="#">보도자료</a></li>
+                  <li><a href="#">입찰공고</a></li>
+                  <li><a href="#">채용정보</a></li>
+                  <li><a href="#">포토뉴스</a></li>
+                  <li><a href="#">사회공헌</a></li>
+                  <li><a href="#">위탁과제</a></li>
+                  <li><a href="#">알림판</a></li>
+                  <li><a href="#">과제계획</a></li>
+                  <li><a href="#">기술이전</a></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="depth1">
+            <a href="#">ESG 열린경영</a>
+            <div class="depth2_bg">
+              <div class="depth2_wrapper">
+                <h2>알림마당</h2>
+                <ul class="depth2">
+                  <li><a href="#">사전정보공표</a></li>
+                  <li><a href="#">정보공개</a></li>
+                  <li><a href="#">경영공시</a></li>
+                  <li><a href="#">자체경영공시</a></li>
+                  <li><a href="#">사업실명제</a></li>
+                  <li><a href="#">청렴윤리</a></li>
+                  <li><a href="#">내부감사결과</a></li>
+                  <li><a href="#">고객만족경영</a></li>
+                  <li><a href="#">안전보건경영</a></li>
+                  <li><a href="#">인권경영</a></li>
+                  <li><a href="#">ESG경영</a></li>
+                  <li><a href="#">사회적 가치 추친</a></li>
+                  <li><a href="#">기업민원 보호ㆍ서비스 헌장</a></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li class="depth1">
+            <a href="#">KISA 소개</a>
+            <div class="depth2_bg">
+              <div class="depth2_wrapper">
+                <h2>알림마당</h2>
+                <ul class="depth2">
+                  <li><a href="#">기관장 인사말</a></li>
+                  <li><a href="#">연혁</a></li>
+                  <li><a href="#">조직도</a></li>
+                  <li><a href="#">CI</a></li>
+                  <li><a href="#">비전 및 목표</a></li>
+                  <li><a href="#">시설개방현황</a></li>
+                  <li><a href="#">찾아오시는길</a></li>
+                  <li><a href="#">국민소통채널</a></li>
+                  <li><a href="#">기관내규(사규)</a></li>
+                  <li><a href="#">사규 제ㆍ개정예고</a></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <div class="header_tool">
+          <ul>
+            <li>
+              <a href="#"><i class="ri-menu-line"></i>&nbsp;전체메뉴</a>
             </li>
-            <li class="main_slide2">
-              <img src="../img/main/main_slide_02.jpg" alt="2" />
+            <li>
+              <a href="#"><i class="ri-global-line"></i>&nbsp;ENG</a>
             </li>
-            <li class="main_slide3">
-              <img src="../img/main/main_slide_03.jpg" alt="3" />
+            <li>
+              <a href="#"><i class="ri-search-line"></i></a>
             </li>
           </ul>
-        </section>
-        <section class="section second">
-
-        </section>
-        <section class="section third">3</section>
+        </div>
       </div>
+    </header>
+    <div id="fullpage" class="section-container">
+      <section class="section first">
+        <ul class="main_slide_wrapper">
+          <li class="main_slide1">
+            <img src="../img/main/main_slide_01.jpg" alt="1" />
+          </li>
+          <li class="main_slide2">
+            <img src="../img/main/main_slide_02.jpg" alt="2" />
+          </li>
+          <li class="main_slide3">
+            <img src="../img/main/main_slide_03.jpg" alt="3" />
+          </li>
+        </ul>
+      </section>
+      <section class="section second">
+        <div class="container">
+          <h6 class="business_text">Business</h6>
+          <h2 class="kisa_text">KISA 사업</h2>
+        </div>
+      </section>
+      <section class="section third">3</section>
+    </div>
     <script src="../js/common.js"></script>
     <script>
       $(function () {
@@ -156,8 +254,8 @@
           anchors: ["#section1", "#section2", "#section3"],
           slideNavigation: true,
           navigation: true,
-          navigationPosition: 'right',
-          navigationTooltips: ['01 Main', '02 Business', '03 News'],
+          navigationPosition: "right",
+          navigationTooltips: ["01 Main", "02 Business", "03 News"],
         });
       });
     </script>
