--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div id="fullpage" class="section-container">
       <section class="section first">
         <ul class="main_slide_wrapper">
-          <li class="main_slide1">
+          <li class="main_slide1 active">
             <img src="../img/main/main_slide_01.jpg" alt="1" />
           </li>
           <li class="main_slide2">
