--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <section class="section first">
         <ul class="main_slide_wrapper">
           <li class="main_slide1 active">
-            <img src="../img/main/main_slide_01.jpg" alt="1" />
+            <img src="img/main/main_slide_01.jpg" alt="1" />
             <div class="slide_text container">
               <p class="slide_p">Korea Internet & Security Agency</p>
               <p class="main_slide_p">
@@ -240,11 +240,11 @@
             </div>
           </li>
           <li class="main_slide2">
-            <img src="../img/main/main_slide_02.jpg" alt="2" />
+            <img src="img/main/main_slide_02.jpg" alt="2" />
             <p>Korea Internet & Security Agency</p>
           </li>
           <li class="main_slide3">
-            <img src="../img/main/main_slide_03.jpg" alt="3" />
+            <img src="img/main/main_slide_03.jpg" alt="3" />
             <p>Korea Internet & Security Agency</p>
           </li>
         </ul>
@@ -362,7 +362,7 @@
       </section>
       <section class="section third">3</section>
     </div>
-    <script src="../js/common.js"></script>
+    <script src="/js/common.js"></script>
     <script>
       $(function () {
         $("#fullpage").fullpage({
