--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       </section>
       <section class="section third">3</section>
     </div>
-    <script src="/js/common.js"></script>
+    <script src="./js/common.js"></script>
     <script>
       $(function () {
         $("#fullpage").fullpage({
