221123 두번째 페이지 정돈

--- a/index.html
+++ b/index.html
@@ -261,17 +261,50 @@
               <h6 class="business_text">Achievements</h6>
               <h2 class="kisa_text">주요성과</h2>
             </div>
-            <div class="second_slide_small">
+            <div class="second_slide_small slider">
               <div class="slide_text_small">
-                <p>01. 사이버침해대응본부</p>
-                <span
-                  >사이버 위협으로부터 국가와 국민의 안전을 지키겠습니다.</span
-                >
+                <div class="small_slider">
+                  <p>01. 사이버침해대응본부</p>
+                  <span
+                    >사이버 위협으로부터 국가와 국민의 안전을
+                    지키겠습니다.</span
+                  >
+                  <div class="second_slide_bottom">
+                    <a href="#">자세히 보기</a>
+                  </div>
+                </div>
+                <div class="small_slider">
+                  <p>02. 사이버침해대응본부</p>
+                  <span
+                    >사이버 위협으로부터 국가와 국민의 안전을
+                    지키겠습니다.</span
+                  >
+                  <div class="second_slide_bottom">
+                    <a href="#">자세히 보기</a>
+                  </div>
+                </div>
+                <div class="small_slider">
+                  <p>03. 사이버침해대응본부</p>
+                  <span
+                    >사이버 위협으로부터 국가와 국민의 안전을
+                    지키겠습니다.</span
+                  >
+                  <div class="second_slide_bottom">
+                    <a href="#">자세히 보기</a>
+                  </div>
+                </div>
+                <div class="small_slider">
+                  <p>04. 사이버침해대응본부</p>
+                  <span
+                    >사이버 위협으로부터 국가와 국민의 안전을
+                    지키겠습니다.</span
+                  >
+                  <div class="second_slide_bottom">
+                    <a href="#">자세히 보기</a>
+                  </div>
+                </div>
               </div>
-              <div class="second_slide_bottom">
-                <a href="#">자세히 보기</a>
-                <div class="btn_wrapper"></div>
-              </div>
+              <div class="btn_wrapper">12313</div>
             </div>
             <div class="second_slide_small2">
               <div class="small2_text">
@@ -316,6 +349,21 @@
             </div>
             <div class="service_slider">
               <ul>
+                <li class="service_item">
+                  <a href="#">
+                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
+                  >
+                </li>
+                <li class="service_item">
+                  <a href="#">
+                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
+                  >
+                </li>
+                <li class="service_item">
+                  <a href="#">
+                    <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
+                  >
+                </li>
                 <li class="service_item">
                   <a href="#">
                     <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a
