221124 버튼 위치들 정렬

--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
                   <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>중소기업홈페이지 보안강화</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>다중이용 기업서비스 취약점 점검</span></a>
                 </li>
                 <li class="service_item">
-                  <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
+                  <a href="#"> <img src="img/main/icon1.png" /> <span>중소기업 취약점</span></a>
                 </li>
                 <li class="service_item">
                   <a href="#"> <img src="img/main/icon1.png" /> <span>내PC돌보미</span></a>
