221125 두번째 페이지 마우스 올리면 배경화면 바뀌기

--- a/index.html
+++ b/index.html
@@ -268,7 +268,11 @@
                   </div>
                 </div>
               </div>
-              <div class="btn_wrapper">12313</div>
+              <div class="btn_wrapper">
+                <div class="prev"><i class="ri-arrow-left-line"></i></div>
+                <div class="pause"><i class="ri-play-fill"></i></div>
+                <div class="next"><i class="ri-arrow-right-line"></i></div>
+              </div>
             </div>
             <div class="second_slide_small2">
               <div class="small2_text">
@@ -311,8 +315,8 @@
             </div>
             <div class="service_slider">
               <div class="service_btn_wrapper">
-                <div class="prev"><</div>
-                <div class="next">></div>
+                <div class="prev"><i class="ri-arrow-left-s-line"></i></div>
+                <div class="next"><i class="ri-arrow-right-s-line"></i></div>
               </div>
               <ul>
                 <li class="service_item">
